# DrogonAuth

./: CMakeLists.txt  README.md  docker-compose.yml
docker/: docker-compose.yml  initPostgreSQL.sql
migrations/: 000_create_schema_migrations.sql
src/: config.json  main.cpp
src/controllers/: AuthController.cc  AuthController.h  authController.cpp  authController.h
src/db/: PSQL.cpp  PSQL.hpp
src/dto/: userDtro.hpp
src/middlewares/: AuthMiddleware.hpp  AuthValidationMiddleware.hpp  TokenExtractionMiddleware.hpp  UsernameValidation.hpp  ValidateEmailAndUsernameMiddleware .hpp  ValidatePasswordMiddleware .hpp  ValidateRequestBodyMiddleware.hpp  ValidateTokensMiddleware.hpp  ValidateUserRequestMiddleware.hpp  authMiddleware.hpp  authValidationMiddleware.hpp
src/models/: Chat.hpp  Message.hpp  User.hpp  UserBase.hpp  chat.hpp
src/repositories/: UserTableRepos.cpp  UserTableRepos.hpp  redisRepos.cpp  redisRepos.hpp  sessionRepos.cpp  sessionRepos.hpp  userRepos.cpp  userTableRepos.cpp  userTableRepos.hpp
src/services/: serviceAuth.cpp  serviceAuth.hpp  serviceRegistraion.cpp  serviceRegistraion.hpp
src/utils/jwt/: jwtToken.hpp
